--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Home
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -13,8 +13,18 @@
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list>
+    <ion-item [routerLink]="['fixtures']">
+      Fixtures
+    </ion-item>
+    <ion-item [routerLink]="['teams']">
+      Teams
+    </ion-item>
+    <ion-item [routerLink]="['phases']">
+      Phases
+    </ion-item>
+    <ion-item [routerLink]="['players']">
+      Players
+    </ion-item>
+  </ion-list>
 </ion-content>
