--- a/src/app/home/fixtures/fixtures.page.html
+++ b/src/app/home/fixtures/fixtures.page.html
@@ -1,6 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>Fixtures</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -24,6 +26,9 @@
         {{fixture.team_h}} {{fixture.team_h_score}} - {{fixture.team_a_score}} {{fixture.team_a}}
         <ion-label *ngFor="let stat of fixture.stats">
           {{stat.identifier}}
+          <ion-label *ngFor="let s of stat.h">
+            {{s.element}} ({{s.value}})
+          </ion-label>
           <ion-label *ngFor="let s of stat.a">
             {{s.element}} ({{s.value}})
           </ion-label>
