--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Home</ion-title>
     </ion-toolbar>
   </ion-header>
 
@@ -25,6 +25,9 @@
     </ion-item>
     <ion-item [routerLink]="['players']">
       Players
+    </ion-item>
+    <ion-item [routerLink]="['prizes']">
+      Prizes
     </ion-item>
   </ion-list>
 </ion-content>
