--- a/src/app/home/phases/phases.page.html
+++ b/src/app/home/phases/phases.page.html
@@ -1,19 +1,21 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
-    <ion-title>phases</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Phases</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">phases</ion-title>
+      <ion-title size="large">Phases</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
-    <ion-item *ngFor="let phase of (this.result | async)?.phases">
+    <ion-item *ngFor="let phase of (this.phasesObservable | async)">
       <ion-label>{{phase.name}}</ion-label>
     </ion-item>
   </ion-list>
