--- a/src/app/home/players/players.page.html
+++ b/src/app/home/players/players.page.html
@@ -1,20 +1,22 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
-    <ion-title>players</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Players</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">players</ion-title>
+      <ion-title size="large">Players</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
-    <ion-item *ngFor="let player of (this.result | async)?.elements">
-      <ion-label>{{player.web_name}}</ion-label>
+    <ion-item *ngFor="let el of (this.elementsObservable | async)">
+      <ion-label>{{el.web_name}}</ion-label>
     </ion-item>
   </ion-list>
 </ion-content>
