--- a/src/app/home/teams/teams.page.html
+++ b/src/app/home/teams/teams.page.html
@@ -1,11 +1,19 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-back-button></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
     <ion-title>Teams</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Teams</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
   <ion-grid class="table-grid">
     <ion-row class="table-row">
       <!--<ion-col>ID</ion-col>-->
@@ -16,7 +24,7 @@
       <ion-col>D</ion-col>
       <ion-col>L</ion-col>
       <ion-col>Pts.</ion-col>
-      <ion-col>+ / - / = </ion-col>
+      <ion-col>+ / - / =</ion-col>
       <!--<ion-col>Short Name</ion-col>-->
       <!--<ion-col>Team Division</ion-col>-->
       <ion-col>Unavailable</ion-col>
